# mcp-vars

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
deploy/openclaw/: Dockerfile  mcp-config.json  openclaw-mcp-vars.sh
mcp_vars/: __main__.py  main.py
mcp_vars/domain/: service.py  validation.py
mcp_vars/install/: installer.py
mcp_vars/server/: app.py
mcp_vars/server/tools/: variable_tools.py
mcp_vars/storage/: connection.py  lazy_store.py  path_resolver.py  schema.sql  sqlite_store.py  store.py
src/: cli.ts  index.ts  main.py
src/domain/: errors.py  errors.ts  models.py  models.ts  service.py  service.ts  validation.py  validation.ts
src/install/: installer.py  installer.ts
src/server/: app.py  app.ts  instructions.ts  tools.ts
src/server/tools/: variable_tools.py
src/storage/: connection.py  json-store.ts  lazy-store.ts  lazy_store.py  path-resolver.ts  path_resolver.py  sqlite_store.py  store.py  store.ts
tests/integration/: service-roundtrip.test.ts  test_tools.py
tests/unit/: installer.test.ts  json-store.test.ts  path-resolver.test.ts  service.test.ts  test_connection.py  test_installer.py  test_lazy_store.py  test_path_resolver.py  test_service.py  test_sqlite_store.py
